[package]
name = "polymarket-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
teloxide = { version = "0.13", features = ["macros"] }
ethers = { version = "2", features = ["legacy"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chrono = "0.4"
hex = "0.4"
rand = "0.8"
polymarket-client-sdk = { version = "0.4", features = ["clob"] }
alloy = { version = "1", features = ["signers", "signer-local"] }
rust_decimal = "1"
rust_decimal_macros = "1"
